Add new `MODULE` `raytracing_in_one_weekend`

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,8 +14,22 @@ set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/fortran-modules)
 
 
 
-add_executable(${PROJECT_NAME}
+add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/InOneWeekend )
+
+
+
+add_executable( ${PROJECT_NAME} )
+
+
+
+target_sources(
+	${PROJECT_NAME}
+	PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/main.f90
 )
+
+
+
+target_link_libraries( ${PROJECT_NAME} _raytracing_one_weekend )
 
 # EOF
