Update Implementation: Image 01 - Introduce `module` `raytracing_in_one_weekend`

--- a/src/InOneWeekend/CMakeLists.txt
+++ b/src/InOneWeekend/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(
 
 
 
-target_link_libraries( _raytracing_one_weekend _raytracing_color )
+target_link_libraries( _raytracing_one_weekend _raytracing_color     )
+target_link_libraries( _raytracing_one_weekend _raytracing_ppm_image )
 
 # EOF
