--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/fortran-modules)
 
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Color        )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/InOneWeekend )
+add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/PPM_Image    )
 
 
 
