--- a/src/InOneWeekend/CMakeLists.txt
+++ b/src/InOneWeekend/CMakeLists.txt
@@ -9,5 +9,6 @@ add_library(
 
 target_link_libraries( _raytracing_one_weekend _raytracing_color     )
 target_link_libraries( _raytracing_one_weekend _raytracing_ppm_image )
+target_link_libraries( _raytracing_one_weekend _raytracing_vec3      )
 
 # EOF
