--- a/src/Sphere/CMakeLists.txt
+++ b/src/Sphere/CMakeLists.txt
@@ -5,6 +5,8 @@ add_library(
 
 
 
-target_link_libraries( _raytracing_ray _raytracing_vec3 )
+target_link_libraries( _raytracing_ray _raytracing_hit_record )
+target_link_libraries( _raytracing_ray _raytracing_hittable   )
+target_link_libraries( _raytracing_ray _raytracing_vec3       )
 
 # EOF
