Update `MODULE` `raytracing_sphere` - Update the definition of `sphere_type` as `extends( hittable_class )` - Introduce `module` `raytracing_ray` - Add the interface of `hit` for `sphere_type`

--- a/src/Sphere/CMakeLists.txt
+++ b/src/Sphere/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(
 
 target_link_libraries( _raytracing_ray _raytracing_hit_record )
 target_link_libraries( _raytracing_ray _raytracing_hittable   )
+target_link_libraries( _raytracing_ray _raytracing_ray        )
 target_link_libraries( _raytracing_ray _raytracing_vec3       )
 
 # EOF
