Fix `MODULE` `raytracing_hittable` - Fix the `CMakeLists.txt` for this `MODULE`

--- a/src/Hittable/CMakeLists.txt
+++ b/src/Hittable/CMakeLists.txt
@@ -5,7 +5,7 @@ add_library(
 
 
 
-target_link_libraries( _raytracing_ray _raytracing_hit_record )
-target_link_libraries( _raytracing_ray _raytracing_ray        )
+target_link_libraries( _raytracing_hittable _raytracing_hit_record )
+target_link_libraries( _raytracing_hittable _raytracing_ray        )
 
 # EOF
