Fix `MODULE` `raytracing_sphere` - Fix the `CMakeLists.txt` for this `MODULE`

--- a/src/Sphere/CMakeLists.txt
+++ b/src/Sphere/CMakeLists.txt
@@ -6,9 +6,9 @@ add_library(
 
 
 
-target_link_libraries( _raytracing_ray _raytracing_hit_record )
-target_link_libraries( _raytracing_ray _raytracing_hittable   )
-target_link_libraries( _raytracing_ray _raytracing_ray        )
-target_link_libraries( _raytracing_ray _raytracing_vec3       )
+target_link_libraries( _raytracing_sphere _raytracing_hit_record )
+target_link_libraries( _raytracing_sphere _raytracing_hittable   )
+target_link_libraries( _raytracing_sphere _raytracing_ray        )
+target_link_libraries( _raytracing_sphere _raytracing_vec3       )
 
 # EOF
