--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,9 +15,12 @@ set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/fortran-modules)
 
 
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Color        )
+add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/HitRecord    )
+add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Hittable     )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/InOneWeekend )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/PPM_Image    )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Ray          )
+add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Sphere       )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Vec3         )
 
 
