Update `MODULE` `raytracing_hit_record` - Introduce `MODULE` `raytracing_ray` - Add an `INTERFACE` `set_face_normal` for `hit_record_type`

--- a/src/HitRecord/CMakeLists.txt
+++ b/src/HitRecord/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(
 
 
 
+target_link_libraries( _raytracing_hit_record _raytracing_ray  )
 target_link_libraries( _raytracing_hit_record _raytracing_vec3 )
 
 # EOF
