--- a/src/HittableListItem/CMakeLists.txt
+++ b/src/HittableListItem/CMakeLists.txt
@@ -5,6 +5,8 @@ add_library(
 
 
 
-target_link_libraries( _raytracing_hittable_list_item _raytracing_hittable )
+target_link_libraries( _raytracing_hittable_list_item _raytracing_hit_record )
+target_link_libraries( _raytracing_hittable_list_item _raytracing_hittable   )
+target_link_libraries( _raytracing_hittable_list_item _raytracing_ray        )
 
 # EOF
