Update `MODULE` `raytracing_hittable_list` - Introduce `MODULE` `raytracing_hittable`

--- a/src/HittableList/CMakeLists.txt
+++ b/src/HittableList/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(
 
 
 
+target_link_libraries( _raytracing_hittable_list _raytracing_hittable           )
 target_link_libraries( _raytracing_hittable_list _raytracing_hittable_list_item )
 
 # EOF
