--- a/src/HittableList/CMakeLists.txt
+++ b/src/HittableList/CMakeLists.txt
@@ -5,7 +5,9 @@ add_library(
 
 
 
+target_link_libraries( _raytracing_hittable_list _raytracing_hit_record         )
 target_link_libraries( _raytracing_hittable_list _raytracing_hittable           )
 target_link_libraries( _raytracing_hittable_list _raytracing_hittable_list_item )
+target_link_libraries( _raytracing_hittable_list _raytracing_ray                )
 
 # EOF
