Update `MODULE` `raytracing_hittable_list_item` - Introduce `MODULE` `raytracing_sphere`

--- a/src/HittableListItem/CMakeLists.txt
+++ b/src/HittableListItem/CMakeLists.txt
@@ -9,5 +9,6 @@ add_library(
 target_link_libraries( _raytracing_hittable_list_item _raytracing_hit_record )
 target_link_libraries( _raytracing_hittable_list_item _raytracing_hittable   )
 target_link_libraries( _raytracing_hittable_list_item _raytracing_ray        )
+target_link_libraries( _raytracing_hittable_list_item _raytracing_sphere     )
 
 # EOF
