Update `MODULE` `raytracing_sphere` - Import `MODULE` `raytracing_interval` - Update `SUBROUTINE` `hit` for `sphere_type`

--- a/src/Sphere/CMakeLists.txt
+++ b/src/Sphere/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(
 
 target_link_libraries( _raytracing_sphere _raytracing_hit_record )
 target_link_libraries( _raytracing_sphere _raytracing_hittable   )
+target_link_libraries( _raytracing_sphere _raytracing_interval   )
 target_link_libraries( _raytracing_sphere _raytracing_ray        )
 target_link_libraries( _raytracing_sphere _raytracing_vec3       )
 
