Update `MODULE` `raytracing_in_one_weekend` - Import `MODULE` `raytracing_interval` - Update `SUBROUTINE` `render_image04_mod1` - Update `SUBROUTINE` `render_image05`

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Hittable         )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/HittableList     )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/HittableListItem )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/InOneWeekend     )
+add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Interval         )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/PPM_Image        )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Ray              )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Sphere           )
