--- a/src/InOneWeekend/CMakeLists.txt
+++ b/src/InOneWeekend/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(
 
 target_link_libraries( _raytracing_one_weekend _raytracing_color         )
 target_link_libraries( _raytracing_one_weekend _raytracing_hittable_list )
+target_link_libraries( _raytracing_one_weekend _raytracing_interval      )
 target_link_libraries( _raytracing_one_weekend _raytracing_ppm_image     )
 target_link_libraries( _raytracing_one_weekend _raytracing_ray           )
 target_link_libraries( _raytracing_one_weekend _raytracing_sphere        )
