Update Implementation: Image 05 (mod1) (WIP) - Import `MODULE` `raytracing_camera` - Update `SUBROUTINE` `render_image05_mod1` (cannot run)

--- a/src/InOneWeekend/CMakeLists.txt
+++ b/src/InOneWeekend/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(
 
 
 
+target_link_libraries( _raytracing_one_weekend _raytracing_camera        )
 target_link_libraries( _raytracing_one_weekend _raytracing_color         )
 target_link_libraries( _raytracing_one_weekend _raytracing_hittable      )
 target_link_libraries( _raytracing_one_weekend _raytracing_hittable_list )
