Fix `MODULE` `raytracing_camera` - Fix the argument of `FUNCTION` `ray_color`

--- a/src/Camera/CMakeLists.txt
+++ b/src/Camera/CMakeLists.txt
@@ -7,10 +7,10 @@ add_library(
 
 
 
-target_link_libraries( _raytracing_camera _raytracing_color     )
-target_link_libraries( _raytracing_camera _raytracing_hittable  )
-target_link_libraries( _raytracing_camera _raytracing_ppm_image )
-target_link_libraries( _raytracing_camera _raytracing_ray       )
-target_link_libraries( _raytracing_camera _raytracing_vec3      )
+target_link_libraries( _raytracing_camera _raytracing_color         )
+target_link_libraries( _raytracing_camera _raytracing_hittable_list )
+target_link_libraries( _raytracing_camera _raytracing_ppm_image     )
+target_link_libraries( _raytracing_camera _raytracing_ray           )
+target_link_libraries( _raytracing_camera _raytracing_vec3          )
 
 # EOF
