--- a/src/Camera/CMakeLists.txt
+++ b/src/Camera/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(
 target_link_libraries( _raytracing_camera _raytracing_color         )
 target_link_libraries( _raytracing_camera _raytracing_hittable_list )
 target_link_libraries( _raytracing_camera _raytracing_ppm_image     )
+target_link_libraries( _raytracing_camera _raytracing_random_number )
 target_link_libraries( _raytracing_camera _raytracing_ray           )
 target_link_libraries( _raytracing_camera _raytracing_vec3          )
 
