--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/HittableListItem )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/InOneWeekend     )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Interval         )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/PPM_Image        )
+add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/RandomNumber     )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Ray              )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Sphere           )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/Vec3             )
